<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dimanor3.inclass03.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="449dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/strName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="390dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/strEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="345dp"
        android:layout_marginEnd="246dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/strDepartment"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="167dp"
        android:layout_height="143dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="176dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strSIS"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strCS"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="25dp"/>

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strBIO"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="57dp"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strOthers"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="89dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="157dp"
        android:layout_marginEnd="221dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="15dp"
        android:text="@string/strCurrentMood"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>

    <Button
        android:id="@+id/button"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="92dp"
        android:text="@string/strSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

</android.support.constraint.ConstraintLayout>
