<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sudent_inf"
        android:layout_width="297dp"
        android:layout_height="77dp"
        android:layout_marginBottom="441dp"
        android:layout_marginEnd="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        style="@style/save"
        android:layout_width="366dp"
        android:layout_height="80dp"
        android:layout_marginBottom="105dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="16dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="167dp"
        android:layout_height="143dp"
        android:layout_marginBottom="58dp"
        android:layout_marginEnd="182dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sudent_inf">

        <RadioButton
            android:id="@+id/radioSIS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/strSIS"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <RadioButton
            android:id="@+id/radioCS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strCS"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="25dp" />

        <RadioButton
            android:id="@+id/radioBIO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strBIO"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="57dp" />

        <RadioButton
            android:id="@+id/radioOthers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strOthers"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="89dp" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>