<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Sudent_inf"
        android:layout_width="297dp"
        android:layout_height="77dp"
        android:layout_marginBottom="441dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/studentInfo"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/name"
        android:layout_width="281dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sudent_inf"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="281dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"/>

    <TextView
        android:id="@+id/department"
        android:layout_width="279dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/department"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"/>

    <TextView
        android:id="@+id/mood"
        android:layout_width="277dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/mood"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/department"/>

    <Button
        android:id="@+id/editEmail"
        style="@style/edit"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:onClick="emailEdit"
        android:text="@string/strEdit"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/editName"/>

    <Button
        android:id="@+id/editName"
        style="@style/edit"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="116dp"
        android:onClick="nameEdit"
        android:text="@string/strEdit"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <Button
        android:id="@+id/editDepartment"
        style="@style/edit"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp"
        android:onClick="departmentEdit"
        android:text="@string/strEdit"
        app:layout_constraintBottom_toTopOf="@+id/mood"
        app:layout_constraintStart_toEndOf="@+id/department"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"/>

    <Button
        android:id="@+id/editMood"
        style="@style/edit"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:layout_marginStart="12dp"
        android:onClick="moodEdit"
        android:text="@string/strEdit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mood"
        />

</android.support.constraint.ConstraintLayout>